--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6015,93 +6015,26 @@ section.lazy-placeholder:after {
 .cid-rIEYDMHuyF .dropdown-item:hover {
   color: #00e620 !important;
 }
-.cid-rIF4eOWeM1 {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
+.cid-rIF6kYyxfR {
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background-color: #333333;
 }
-.cid-rIF4eOWeM1 a:link {
-  text-decoration: none;
+.cid-rIF5qNOkVk {
+  padding-top: 75px;
+  padding-bottom: 60px;
+  background-color: #333333;
 }
-.cid-rIF4eOWeM1 .icon-transition span {
-  padding: 0.1rem 0.9rem;
-  border-radius: 50%;
-  color: #ffffff;
-  display: block;
-  height: 3em;
-  line-height: 3em;
-  width: 3em;
-  background: #444444 none repeat scroll 0 0;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-  font-size: 14px;
-}
-.cid-rIF4eOWeM1 .icon-transition span:hover {
-  background-color: #ffbc00;
-}
-.cid-rIF4eOWeM1 .social-media ul {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 8px;
-}
-.cid-rIF4eOWeM1 .social-media ul li {
-  padding: 4px;
-  display: inline-block;
-}
-.cid-rIF4eOWeM1 .foot-menu {
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  margin: 0;
-  margin-bottom: 8px;
-  padding: .6em 0;
-}
-.cid-rIF4eOWeM1 .foot-menu > li {
-  font-size: 14px;
-  padding: 0;
-  display: inline-block;
-}
-.cid-rIF4eOWeM1 .foot-menu > li .rhombus {
-  width: 0;
-  height: 0;
-  right: 4px;
-  border: 4px solid transparent;
-  border-bottom-color: #444444;
-  position: relative;
-  top: -19px;
-}
-.cid-rIF4eOWeM1 .foot-menu > li .rhombus::after {
-  width: 0;
-  height: 0;
-  content: '';
-  position: absolute;
-  left: -4px;
-  top: 4px;
-  border: 4px solid transparent;
-  border-top-color: #444444;
-}
-.cid-rIF4eOWeM1 .foot-menu li a {
-  font-family: 'OpenSans', sans-serif;
-  display: inline-block;
-  letter-spacing: 2px;
-  padding: 0 10px;
-}
-.cid-rIF4eOWeM1 .plan-title,
-.cid-rIF4eOWeM1 .text-letter {
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-  font-weight: 600;
-}
-.cid-rIF4eOWeM1 .plan-title {
-  color: #444444;
-}
-@media (max-width: 767px) {
-  .cid-rIF4eOWeM1 .foot-menu {
-    padding: 15px 1rem;
+@media (min-width: 992px) {
+  .cid-rIF5qNOkVk .mbr-figure {
+    padding-right: 4rem;
   }
 }
-.cid-rIF4eOWeM1 .mbr-section-title span {
-  color: #ffbc00;
+@media (max-width: 991px) {
+  .cid-rIF5qNOkVk .mbr-figure {
+    padding-bottom: 1rem;
+  }
 }
-.cid-rIF4eOWeM1 .mbr-section-title {
-  color: #ff4100;
+.cid-rIF5qNOkVk .mbr-text {
+  color: #00e620;
 }
